--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,14 @@ header h1 {
   margin: 0;
 }
 
+.header-divider {
+  border: none;
+  border-top: 2px solid #ccc; 
+  margin: 20px auto;
+  width: 60%; 
+}
+
+
 nav ul {
   list-style: none;
   padding: 0;
